# streamlit-financeiro

./: .gitignore  PRD.md  app.py  config.py  dashboard.py  orcamento.py  pyproject.toml  relatorio.py  tabela.py  test_app.py
.streamlit/: config.toml
src/: agent.py  tools.py
src/report/: __init__.py
src/report/templates/: slide_capa.html  slide_metricas_despesas.html  slide_metricas_receitas.html  slide_resultado.html  slide_resumo.html  template.jinja
utils/: database.py  logger.py  metricas.py  utils.py
