[project]
name = "projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.8",
    "pytest>=9.0.2",
    "streamlit>=1.54.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
