[project]
name = "projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.8",
    "pytest>=9.0.2",
    "streamlit>=1.54.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
    "st-supabase-connection>=1.2.3",
    "supabase>=2.13.0",
    "colorama>=0.4.6",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "langchain-openai>=1.1.12",
    "jinja2>=3.1",
    "pdfkit>=1.0",
    "pypdf>=4.0",
    "kaleido>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
